cv7/cv7/parser3.output
Grammar

    0 $accept: S $end

    1 S: A B

    2 A: A_TOK H_TOK
    3  | A_TOK B_TOK A C_TOK
    4  | A_TOK B C_TOK

    5 B: C D E

    6 C: D_TOK
    7  | E_TOK

    8 D: F_TOK D
    9  | F_TOK

   10 E: B
   11  | G_TOK


Terminals, with rules where they appear

$end (0) 0
error (256)
A_TOK (258) 2 3 4
B_TOK (259) 3
C_TOK (260) 3 4
D_TOK (261) 6
E_TOK (262) 7
F_TOK (263) 8 9
G_TOK (264) 11
H_TOK (265) 2


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
S (12)
    on left: 1, on right: 0
A (13)
    on left: 2 3 4, on right: 1 3
B (14)
    on left: 5, on right: 1 4 10
C (15)
    on left: 6 7, on right: 5
D (16)
    on left: 8 9, on right: 5 8
E (17)
    on left: 10 11, on right: 5


State 0

    0 $accept: . S $end

    A_TOK  shift, and go to state 1

    S  go to state 2
    A  go to state 3


State 1

    2 A: A_TOK . H_TOK
    3  | A_TOK . B_TOK A C_TOK
    4  | A_TOK . B C_TOK

    B_TOK  shift, and go to state 4
    D_TOK  shift, and go to state 5
    E_TOK  shift, and go to state 6
    H_TOK  shift, and go to state 7

    B  go to state 8
    C  go to state 9


State 2

    0 $accept: S . $end

    $end  shift, and go to state 10


State 3

    1 S: A . B

    D_TOK  shift, and go to state 5
    E_TOK  shift, and go to state 6

    B  go to state 11
    C  go to state 9


State 4

    3 A: A_TOK B_TOK . A C_TOK

    A_TOK  shift, and go to state 1

    A  go to state 12


State 5

    6 C: D_TOK .

    $default  reduce using rule 6 (C)


State 6

    7 C: E_TOK .

    $default  reduce using rule 7 (C)


State 7

    2 A: A_TOK H_TOK .

    $default  reduce using rule 2 (A)


State 8

    4 A: A_TOK B . C_TOK

    C_TOK  shift, and go to state 13


State 9

    5 B: C . D E

    F_TOK  shift, and go to state 14

    D  go to state 15


State 10

    0 $accept: S $end .

    $default  accept


State 11

    1 S: A B .

    $default  reduce using rule 1 (S)


State 12

    3 A: A_TOK B_TOK A . C_TOK

    C_TOK  shift, and go to state 16


State 13

    4 A: A_TOK B C_TOK .

    $default  reduce using rule 4 (A)


State 14

    8 D: F_TOK . D
    9  | F_TOK .

    F_TOK  shift, and go to state 14

    $default  reduce using rule 9 (D)

    D  go to state 17


State 15

    5 B: C D . E

    D_TOK  shift, and go to state 5
    E_TOK  shift, and go to state 6
    G_TOK  shift, and go to state 18

    B  go to state 19
    C  go to state 9
    E  go to state 20


State 16

    3 A: A_TOK B_TOK A C_TOK .

    $default  reduce using rule 3 (A)


State 17

    8 D: F_TOK D .

    $default  reduce using rule 8 (D)


State 18

   11 E: G_TOK .

    $default  reduce using rule 11 (E)


State 19

   10 E: B .

    $default  reduce using rule 10 (E)


State 20

    5 B: C D E .

    $default  reduce using rule 5 (B)
